JDK1.4 fix.
git-svn-id: https://anonsvn.jboss.org/repos/common/trunk@1284 15291643-af16-0410-b526-a589213603f9