@@ -26,7 +26,7 @@ public class CharacterEditor extends PropertyEditorSupport
       }
       if (text.length() != 1)
          throw new IllegalArgumentException("Too many (" + text.length() + ") characters: '" + text + "'"); 
-      Object newValue = Character.valueOf(text.charAt(0));
+      Object newValue = new Character(text.charAt(0));
       setValue(newValue);
    }
 }
